# MyGUI

./: .gitignore  CMakeLists.txt  ChangeLog.txt  ChangeLog_rus.txt
CMake/: Dependencies.cmake
CMake/Utils/: MyGUIConfigTargets.cmake
Common/: Android.mk  CMakeLists.txt
Common/Base/: BaseDemoManager.h  Main.h  StatisticInfo.h
Common/Base/Cocos2d/: BaseManager.cpp  BaseManager.h
Common/Base/DirectX/: BaseManager.cpp  BaseManager.h
Common/Base/DirectX11/: BaseManager.cpp  BaseManager.h
Common/Base/Dummy/: BaseManager.h
Common/Base/Ogre/: BaseManager.cpp  BaseManager.h
Common/Base/OpenGL/: BaseManager.cpp  BaseManager.h
Common/BaseLayout/: Attribute.h  BaseLayout.h
Common/Cocos2d/RenderBox/: RenderBox.cpp  RenderBox.h
Common/FileSystemInfo/: FileSystemInfo.h
Common/FileSystemInfo/Cocos2d/: FileSystemInfo.h  FileSystemInfo_android.cpp  FileSystemInfo_ios.cpp  FileSystemInfo_ios.mm  FileSystemInfo_pc.cpp
Common/FileSystemInfo/Default/: FileSystemInfo.h
Common/Input/: InputConverter.h
Common/Input/Cocos2d/: InputManager.cpp  InputManager.h
Common/Input/OIS/: InputManager.cpp  PointerManager.cpp  PointerManager.h
Common/Input/Win32/: InputManager.cpp  PointerManager.cpp  PointerManager.h
Common/Input/Win32_OIS/: InputManager.cpp  InputManager.h  PointerManager.cpp  PointerManager.h  ResourceW32Pointer.cpp
Common/ItemBox/: BaseItemBox.h
Common/MessageBox/: MessageBox.h  MessageBoxStyle.h
Common/Ogre/RenderBox/: RenderBoxScene.h
Common/PanelView/: BasePanelView.h  BasePanelViewCell.h  BasePanelViewItem.h
Common/Tools/: OpenSaveFileDialog.cpp
Common/proj.ios/MyGUICommon/: MyGUICommon-Prefix.pch
Common/proj.ios/MyGUICommon.xcodeproj/: project.pbxproj
Demos/: CMakeLists.txt
Demos/Demo_Colour/: ColourPanel.cpp  ColourPanel.h  DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_Console/: Console.cpp  DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_Controllers/: DemoKeeper.cpp  DemoKeeper.h  State.cpp  State.h
Demos/Demo_Gui/: DemoKeeper.cpp  DemoKeeper.h  HelloWorldScene.cpp
Demos/Demo_ItemBox/: CellView.cpp  DemoKeeper.cpp  DemoKeeper.h  ToolTip.cpp
Demos/Demo_PanelView/: DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_Picking/: DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_PluginBerkeliumWidget/: BerkeliumBrowser.cpp  BerkeliumBrowser.h  DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_PluginStrangeButton/: DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_Pointers/: ControlPanel.cpp  DemoKeeper.cpp  DemoKeeper.h  PointerContextManager.cpp  PointerContextManager.h  ResourcePointerContext.cpp  ResourcePointerContext.h
Demos/Demo_RenderBox/: DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_ScrollView/: DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_Themes/: DemoKeeper.cpp  DemoKeeper.h
Demos/MyGUIDemo/: CMakeLists.txt  MyGUIDemo.list
Media/MyGUI_Media/: MyGUI_CommonSkins.xml  MyGUI_Core.xml  MyGUI_Fonts.xml  MyGUI_Settings.xml
MyGUIEngine/: Android.mk  MyGUIEngine.list
MyGUIEngine/include/: MyGUI_ActionController.h  MyGUI_Align.h  MyGUI_Any.h  MyGUI_BackwardCompatibility.h  MyGUI_Button.h  MyGUI_Canvas.h  MyGUI_Colour.h  MyGUI_ComboBox.h  MyGUI_ControllerItem.h  MyGUI_ControllerManager.h  MyGUI_DDContainer.h  MyGUI_DDItemInfo.h  MyGUI_DataManager.h  MyGUI_DataMemoryStream.h  MyGUI_DataStream.h  MyGUI_DataStreamHolder.h  MyGUI_Delegate.h  MyGUI_DelegateImplement.h  MyGUI_Diagnostic.h  MyGUI_EditBox.h  MyGUI_EditText.h  MyGUI_EventPair.h  MyGUI_FactoryManager.h  MyGUI_FlowDirection.h  MyGUI_FontManager.h  MyGUI_Gui.h  MyGUI_IDataStream.h  MyGUI_ILayer.h  MyGUI_ILayerNode.h  MyGUI_IMEManager.h  MyGUI_IObject.h  MyGUI_IResource.h  MyGUI_ISubWidget.h  MyGUI_ISubWidgetText.h  MyGUI_ITexture.h  MyGUI_IVertexBuffer.h  MyGUI_ImageBox.h  MyGUI_ImageSkin.h  MyGUI_InputManager.h  MyGUI_ItemBox.h  (+54 more)
MyGUIEngine/src/: MyGUI_ActionController.cpp  MyGUI_Any.cpp  MyGUI_BackwardCompatibility.cpp  MyGUI_BiIndexBase.cpp  MyGUI_Button.cpp  MyGUI_Canvas.cpp  MyGUI_ClipboardManager.cpp  MyGUI_Colour.cpp  MyGUI_ComboBox.cpp  MyGUI_Constants.cpp  MyGUI_ControllerEdgeHide.cpp  MyGUI_ControllerFadeAlpha.cpp  MyGUI_ControllerManager.cpp  MyGUI_ControllerPosition.cpp  MyGUI_DDContainer.cpp  MyGUI_DataManager.cpp  MyGUI_DataMemoryStream.cpp  MyGUI_DataStream.cpp  MyGUI_DynLib.cpp  MyGUI_DynLibManager.cpp  MyGUI_EditBox.cpp  MyGUI_EditText.cpp  MyGUI_FactoryManager.cpp  MyGUI_FontManager.cpp  MyGUI_GeometryUtility.cpp  MyGUI_Gui.cpp  MyGUI_IMEManager.cpp  MyGUI_ImageBox.cpp  MyGUI_ImageSkin.cpp  MyGUI_InputManager.cpp  MyGUI_ItemBox.cpp  MyGUI_LanguageManager.cpp  MyGUI_LayerItem.cpp  MyGUI_LayerManager.cpp  MyGUI_LayerNode.cpp  MyGUI_LayoutManager.cpp  MyGUI_ListBox.cpp  MyGUI_MaskPickInfo.cpp  MyGUI_MenuControl.cpp  MyGUI_MenuItem.cpp  (+46 more)
Plugins/Plugin_BerkeliumWidget/: BerkeliumDelegate.cpp  BerkeliumDelegate.h  BerkeliumWidget.cpp  BerkeliumWidget.h  Buffer.h  Plugin.cpp
Plugins/Plugin_HikariWidget/: FlashControl.cpp  FlashHandler.h  HikariWidget.cpp  HikariWidget.h  Plugin.cpp
Plugins/Plugin_StrangeButton/: Plugin.cpp  Plugin_Export.cpp
Scripts/cppcheck/: MyGUI_Platform.h
Tools/EditorFramework/: Action.h  ActionChangeDataProperty.cpp  ActionChangeDataProperty.h  ActionChangePositionData.cpp  ActionChangePositionData.h  ActionCloneData.cpp  ActionCloneData.h  ActionCreateData.cpp  ActionCreateData.h  ActionDestroyData.cpp  ActionDestroyData.h  ActionManager.cpp  ActionManager.h  (+143 more)
(+372 files in other folders)
